--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "REST api for e-book",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.ts"
+    "dev": "nodemon server.ts",
+     "clean": "rm -rf dist",    // Example clean command for Unix-based systems
+    "build": "tsc",            // Example TypeScript build command
+    "start": "node dist/index.js"  // Example command to start your Node.js application
   },
   "keywords": [
     "api",
@@ -20,6 +23,7 @@
     "@eslint/js": "^9.7.0",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
+    "@types/http-errors": "^2.0.4",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20.14.10",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
@@ -33,6 +37,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "http-errors": "^2.0.0"
   }
 }
