add file upload feature to upload image on cloudinary

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 PORT = '4000'
 MONGO_CONNECTION_STRING = mongodb://localhost:27017/elib
 NODE_ENV='development'
-JWT_SECRET = 'IAMSMASHERSEVELOPER'
+JWT_SECRET = 'IAMSMASHERSEVELOPER_ALHAMDULILLAAH '
+CLOUDINARY_cLOUD_NAME=dolpyh8om
+CLOUDINARY_API_KEY= 491392511411817
+CLOUDINARY_API_SECRET=-fNPNbbvIkqPpq3RfHxRbMsyTGM 
